@@ -1,4 +1,6 @@
 1.0.4
+ * fix self-hinting of timed out read repair updates and make hinted handoff
+   less prone to OOMing a coordinator (CASSANDRA-3440)
  * expose bloom filter sizes via JMX (CASSANDRA-3495)
  * enforce RP tokens 0..2**127 (CASSANDRA-3501)
  * canonicalize paths exposed through JMX (CASSANDRA-3504)
